# halavia

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
src/: main.py
src/api/routes/: __init__.py  order.py  user.py
src/api/scehmas/: order.py  user.py
src/core/: settings.py
src/core/exceptions/: order.py  user.py
src/db/: enums.py  session.py
src/db/init/: db.py
src/db/repositories/: order.py  toast.py  user.py
src/db/tables/: __init__.py  order.py  toast.py  user.py
src/repository/: enums.py  order.py  orders.py
src/services/: order.py  user.py
